# score_explorer

./: data_loader.py  demo.py  evaluation_results.csv  inspect_dataset.py  main.py  models.py  pyproject.toml  run_comparison.py  search_evaluator.py  test_mteb_load.py
scripts/: demo.py  run_comparison.py
src/score_explorer/: __init__.py
src/score_explorer/data/: loader.py
src/score_explorer/evaluation/: __init__.py  evaluator.py
src/score_explorer/models/: __init__.py  jina_v2.py  jina_v3.py
src/score_explorer/utils/: __init__.py  visualization.py
